chore: Add Docker image pruning to the `go` script in `package.json`.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "tsx src/main.ts",
     "build": "tsc",
     "lint": "eslint src/**/*.ts",
-    "go": "docker build -t the-last . && docker run -it --rm -v $(pwd)/src:/app/src -v $(pwd)/workspace:/app/workspace the-last",
+    "go": "docker build -t the-last . && docker image prune -f && docker run -it --rm -v $(pwd)/src:/app/src -v $(pwd)/workspace:/app/workspace the-last",
     "docker:build": "docker build -t the-last .",
     "docker:run": "docker run -it --rm -v $(pwd)/src:/app/src -v $(pwd)/workspace:/app/workspace the-last"
   },
