--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "docker:run": "docker run -it --rm -v $(pwd)/src:/app/src -v $(pwd)/workspace:/app/workspace the-last"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.72.1",
     "chalk": "^5.3.0",
+    "dotenv": "^17.2.3",
     "inquirer": "^13.2.2",
     "ollama": "^0.6.3",
     "puppeteer-core": "^24.36.1",
