--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^17.2.3",
     "inquirer": "^13.2.2",
     "ollama": "^0.6.3",
+    "openai": "^6.17.0",
     "puppeteer-core": "^24.36.1",
     "zod": "^4.3.6"
   },
