--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ollama": "^0.6.3",
     "openai": "^6.17.0",
     "puppeteer-core": "^24.36.1",
+    "sqlite3": "^5.1.7",
     "zod": "^4.3.6"
   },
   "devDependencies": {
