--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,15 @@ npm-debug.log*
 # Workspace files created by agent (optional - uncomment to track)
 workspace/
 .env
+
+# Backup files
+*.backup
+
+# Python
+__pycache__/
+*.pyc
+venv/
+.venv/
+
+# Config files with credentials
+src/skills/**/config.json
